objects/ssot__LearningProgramPlanRqmt__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryText__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupNameText__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Program Plan Requirement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningAchievementId__c</fullName>
        <label>Learning Achievement</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanId__c</fullName>
        <label>Learning Program Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumNumericGradeNumber__c</fullName>
        <label>Minimum Numeric Grade</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReusableLearningProgramPlan__c</fullName>
        <label>Reusable Learning Program Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819802775_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningProgramPlanRqmt_ReusableLear_rel</label>
        <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
        <relationshipLabel>LearningProgramPlanRqmt_ReusableLear_rel</relationshipLabel>
        <relationshipName>rel_1719819802775_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819810434_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningProgramPlanRqmt_LearningProg_rel</label>
        <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
        <relationshipLabel>LearningProgramPlanRqmt_LearningProg_rel</relationshipLabel>
        <relationshipName>rel_1719819810434_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819895881_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningProgramPlanRqmt_LearningAchi_rel</label>
        <referenceTo>ssot__LearningAchievement__dlm</referenceTo>
        <relationshipLabel>LearningProgramPlanRqmt_LearningAchi_rel</relationshipLabel>
        <relationshipName>rel_1719819895881_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>